Begin component refactoring using placeholders to reduce redundancy.

--- a/json/T40_components_accessories.json
+++ b/json/T40_components_accessories.json
@@ -1,33 +1,19 @@
 {
-"aux_light_l": {
-    "id": "aux_light_l",
+"aux_light_(SIDE)":
+{
+    "id": "aux_light_(SIDE)",
     "type": "light",
-    "name": "Auxiliary Bottom Light (L)",
-    "name_spanish": "Luz Auxiliar Inferior (Izquierda)",
+    "name": "Auxiliary Bottom Light ((SIDE_ENG))",
+    "name_spanish": "Luz Auxiliar Inferior ((SIDE_SPA))",
     "material_num": "BC.AG.SS000548",
     "material_name": "Auxiliary Bottom Light Module"
 },
-"aux_light_r": {
-    "id": "aux_light_r",
-    "type": "light",
-    "name": "Auxiliary Bottom Light (R)",
-    "name_spanish": "Luz Auxiliar Inferior (Derecha)",
-    "material_num": "BC.AG.SS000548",
-    "material_name": "Auxiliary Bottom Light Module"
-},
-"aux_light_cable_l": {
-  "id": "aux_light_cable_l",
+"aux_light_cable_(SIDE)":
+{
+  "id": "aux_light_cable_(SIDE)",
   "type": "cable", 
-  "name": "Auxiliary Bottom Light Signal Cable (L)",
-  "name_spanish": "Cable de Luz Auxiliar (Izquierdo)",
-  "material_num": "YC.XC.XX000853",
-  "material_name": "Auxiliary Bottom Light Signal Cable"
-},
-"aux_light_cable_r": {
-  "id": "aux_light_cable_r",
-  "type": "cable",
-  "name": "Auxiliary Bottom Light Signal Cable (R)", 
-  "name_spanish": "Cable de Luz Auxiliar (Derecho)",
+  "name": "Auxiliary Bottom Light Signal Cable ((SIDE_ENG))",
+  "name_spanish": "Cable de Luz Auxiliar ((SIDE_SPA))",
   "material_num": "YC.XC.XX000853",
   "material_name": "Auxiliary Bottom Light Signal Cable"
 }
