--- a/json/T40_components_core.json
+++ b/json/T40_components_core.json
@@ -1,47 +1,54 @@
 {
-"battery": {
+"battery":
+{
 "type": "battery",
 "name": "Battery",
 "name_spanish": "Batería",
 "material_num": "NA",
 "material_name": "Battery"
 },
-"cdb": {
+"cdb":
+{
 "type": "board",
 "name": "Cable Distribution Board",
 "name_spanish": "Tarjeta de Distribución de Cables",
 "material_num": "BC.AG.SS000556",
 "material_name": "Cable Distribution Board"
 },
-"pdb": {
+"pdb":
+{
 "type": "board",
 "name": "Power Distribution Board",
 "name_spanish": "Tarjeta de Distribución de Potencia",
 "material_num": "BC.AG.SS000558",
 "material_name": "Power Distribution Board"
 },
-"avionics": {
+"avionics":
+{
 "type": "board",
 "name": "Avionics Board",
 "name_spanish": "Tarjeta de Aviónica",
 "material_num": "BC.AG.SS000617",
 "material_name": "Aerial-electronics Board (FCC)"
 },
-"rf_board": {
+"rf_board":
+{
 "type": "board",
 "name": "RF Board",
 "name_spanish": "Tarjeta RF",
 "material_num": "BC.AG.SS000552",
 "material_name": "RF Board"
 },
-"spray_board": {
+"spray_board":
+{
 "type": "board",
 "name": "Spraying Board",
 "name_spanish": "Tarjeta de Rociado",
 "material_num": "BC.AG.SS000554",
 "material_name": "Spraying Board"
 },
-"signal_cable_(SIDE)": {
+"signal_cable_(SIDE)":
+{
   "type": "cable",
   "name": "Signal Cable ((SIDE_ENG))",
   "name_spanish": "Cable de Señal ((SIDE_SPA))",
