--- a/json/T40_components_propulsion.json
+++ b/json/T40_components_propulsion.json
@@ -1,187 +1,50 @@
 {
-"m1_pos": {
+"m(ARM)_pos":
+{
     "type": "sensor",
-    "name": "M1 Arm In-position Detector",
-    "alt_name": "M1 Folding Sensor",
-    "name_spanish": "Sensor de Plegado del Brazo M1",
+    "name": "M(ARM) Arm In-position Detector",
+    "alt_name": "M(ARM) Folding Sensor",
+    "name_spanish": "Sensor de Plegado del Brazo M(ARM)",
     "material_num": "BC.AG.SS000547",
     "material_name": "Aircraft Arm In-position Detector Signal Cable"
 },
-"m2_pos": {
-    "type": "sensor",
-    "name": "M2 Arm In-position Detector",
-    "alt_name": "M2 Folding Sensor",
-    "name_spanish": "Sensor de Plegado del Brazo M2",
-    "material_num": "BC.AG.SS000547",
-    "material_name": "Aircraft Arm In-position Detector Signal Cable"
-},
-"m3_pos": {
-    "type": "sensor",
-    "name": "M3 Arm In-position Detector",
-    "alt_name": "M3 Folding Sensor",
-    "name_spanish": "Sensor de Plegado del Brazo M3",
-    "material_num": "BC.AG.SS000547",
-    "material_name": "Aircraft Arm In-position Detector Signal Cable"
-},
-"m4_pos": {
-    "type": "sensor",
-    "name": "M4 Arm In-position Detector",
-    "alt_name": "M4 Folding Sensor",
-    "name_spanish": "Sensor de Plegado del Brazo M4",
-    "material_num": "BC.AG.SS000547",
-    "material_name": "Aircraft Arm In-position Detector Signal Cable"
-},
-"esc_1": {
+"esc_(MOTOR)":
+{
   "type": "esc",
-  "name": "ESC 1",
-  "name_spanish": "ESC 1",
+  "name": "ESC (MOTOR)",
+  "name_spanish": "ESC (MOTOR)",
   "material_num": "BC.AG.SS000563",
   "material_name": "ESC Module"
 },
-"esc_2": {
-  "type": "esc",
-  "name": "ESC 2",
-  "name_spanish": "ESC 2",
-  "material_num": "BC.AG.SS000563",
-  "material_name": "ESC Module"
-},
-"esc_3": {
-  "type": "esc",
-  "name": "ESC 3",
-  "name_spanish": "ESC 3",
-  "material_num": "BC.AG.SS000563",
-  "material_name": "ESC Module"
-},
-"esc_4": {
-  "type": "esc",
-  "name": "ESC 4",
-  "name_spanish": "ESC 4",
-  "material_num": "BC.AG.SS000563",
-  "material_name": "ESC Module"
-},
-"esc_5": {
-  "type": "esc",
-  "name": "ESC 5",
-  "name_spanish": "ESC 5",
-  "material_num": "BC.AG.SS000563",
-  "material_name": "ESC Module"
-},
-"esc_6": {
-  "type": "esc",
-  "name": "ESC 6",
-  "name_spanish": "ESC 6",
-  "material_num": "BC.AG.SS000563",
-  "material_name": "ESC Module"
-},
-"esc_7": {
-  "type": "esc",
-  "name": "ESC 7",
-  "name_spanish": "ESC 7",
-  "material_num": "BC.AG.SS000563",
-  "material_name": "ESC Module"
-},
-"esc_8": {
-  "type": "esc",
-  "name": "ESC 8",
-  "name_spanish": "ESC 8",
-  "material_num": "BC.AG.SS000563",
-  "material_name": "ESC Module"
-},
-"motor_1": {
+"motor_(MOTOR)":
+{
   "type": "motor",
-  "name": "Motor 1",
-  "name_spanish": "Motor 1",
+  "name": "Motor (MOTOR)",
+  "name_spanish": "Motor (MOTOR)",
   "material_num": "BC.AG.SS000668",
   "material_name": "Propulsion Motor 10033"
 },
-"motor_2": {
-  "type": "motor",
-  "name": "Motor 2",
-  "name_spanish": "Motor 2",
-  "material_num": "BC.AG.SS000668",
-  "material_name": "Propulsion Motor 10033"
-},
-"motor_3": {
-  "type": "motor",
-  "name": "Motor 3",
-  "name_spanish": "Motor 3",
-  "material_num": "BC.AG.SS000668",
-  "material_name": "Propulsion Motor 10033"
-},
-"motor_4": {
-  "type": "motor",
-  "name": "Motor 4",
-  "name_spanish": "Motor 4",
-  "material_num": "BC.AG.SS000668",
-  "material_name": "Propulsion Motor 10033"
-},
-"motor_5": {
-  "type": "motor",
-  "name": "Motor 5",
-  "name_spanish": "Motor 5",
-  "material_num": "BC.AG.SS000668",
-  "material_name": "Propulsion Motor 10033"
-},
-"motor_6": {
-  "type": "motor",
-  "name": "Motor 6",
-  "name_spanish": "Motor 6",
-  "material_num": "BC.AG.SS000668",
-  "material_name": "Propulsion Motor 10033"
-},
-"motor_7": {
-  "type": "motor",
-  "name": "Motor 7",
-  "name_spanish": "Motor 7",
-  "material_num": "BC.AG.SS000668",
-  "material_name": "Propulsion Motor 10033"
-},
-"motor_8": {
-  "type": "motor",
-  "name": "Motor 8",
-  "name_spanish": "Motor 8",
-  "material_num": "BC.AG.SS000668",
-  "material_name": "Propulsion Motor 10033"
-},
-"front_esc_cable_l": {
+"front_esc_cable_(SIDE)":
+{
   "type": "cable",
-  "name": "Front Aircraft Arm ESC Power Adapter Cable (L)",
-  "name_spanish": "Cable Adaptador de Potencia del Brazo Delantero (Izquierdo)",
+  "name": "Front Aircraft Arm ESC Power Adapter Cable ((SIDE_ENG))",
+  "name_spanish": "Cable Adaptador de Potencia del Brazo Delantero ((SIDE_SPA))",
   "material_num": "YC.XC.DD000501",
   "material_name": "Front Aircraft Arm ESC Power Adapter Cable"
 },
-"front_esc_cable_r": {
+"m(ARM_FRONT)_esc_cable":
+{
   "type": "cable",
-  "name": "Front Aircraft Arm ESC Power Adapter Cable (R)",
-  "name_spanish": "Cable Adaptador de Potencia del Brazo Delantero (Derecho)",
-  "material_num": "YC.XC.DD000501",
-  "material_name": "Front Aircraft Arm ESC Power Adapter Cable"
-},
-"m1_esc_cable": {
-  "type": "cable",
-  "name": "M1 Aircraft Arm ESC Composite Cable",
-  "name_spanish": "Cable de ESC del Brazo M1",
+  "name": "M(ARM_FRONT) Aircraft Arm ESC Composite Cable",
+  "name_spanish": "Cable de ESC del Brazo M(ARM_FRONT)",
   "material_num": "YC.XC.XS000011",
   "material_name": "M1 & M2 Aircraft Arm ESC Composite Cable"
 },
-"m2_esc_cable": {
+"m(ARM_BACK)_esc_cable":
+{
   "type": "cable",
-  "name": "M2 Aircraft Arm ESC Composite Cable",
-  "name_spanish": "Cable de ESC del Brazo M2",
-  "material_num": "YC.XC.XS000011",
-  "material_name": "M1 & M2 Aircraft Arm ESC Composite Cable"
-},
-"m3_esc_cable": {
-  "type": "cable",
-  "name": "M3 Aircraft Arm ESC Composite Cable",
-  "name_spanish": "Cable de ESC del Brazo M3",
-  "material_num": "YC.XC.XS000012",
-  "material_name": "M3 & M4 Aircraft Arm ESC Composite Cable"
-},
-"m4_esc_cable": {
-  "type": "cable",
-  "name": "M4 Aircraft Arm ESC Composite Cable",
-  "name_spanish": "Cable de ESC del Brazo M4",
+  "name": "M(ARM_BACK) Aircraft Arm ESC Composite Cable",
+  "name_spanish": "Cable de ESC del Brazo M(ARM_BACK)",
   "material_num": "YC.XC.XS000012",
   "material_name": "M3 & M4 Aircraft Arm ESC Composite Cable"
 }
