--- a/json/components_accessories.json
+++ b/json/components_accessories.json
@@ -3,8 +3,8 @@
 {
     "id": "aux_light_(SIDE)",
     "type": "light",
-    "name": "Auxiliary Bottom Light ((SIDE_ENG))",
-    "name_spanish": "Luz Auxiliar Inferior ((SIDE_SPA))",
+    "name": "Auxiliary Bottom Light ((ENG(SIDE)))",
+    "name_spanish": "Luz Auxiliar Inferior ((SPA(SIDE)))",
     "material_num": "BC.AG.SS000548",
     "material_name": "Auxiliary Bottom Light Module"
 },
@@ -12,8 +12,8 @@
 {
   "id": "aux_light_cable_(SIDE)",
   "type": "cable", 
-  "name": "Auxiliary Bottom Light Signal Cable ((SIDE_ENG))",
-  "name_spanish": "Cable de Luz Auxiliar ((SIDE_SPA))",
+  "name": "Auxiliary Bottom Light Signal Cable ((ENG(SIDE)))",
+  "name_spanish": "Cable de Luz Auxiliar ((SPA(SIDE)))",
   "material_num": "YC.XC.XX000853",
   "material_name": "Auxiliary Bottom Light Signal Cable"
 }
