--- a/domain_knowledge_A/components_propulsion.json
+++ b/domain_knowledge_A/components_propulsion.json
@@ -3,7 +3,7 @@
 {
     "type": "sensor",
     "name": "M(SAME[ARM]) Arm In-position Detector",
-    "alt_name": "M(SAME[ARM]) Folding Sensor",
+    "name_alt": "M(SAME[ARM]) Folding Sensor",
     "name_spanish": "Sensor de Plegado del Brazo M(SAME[ARM])",
     "material_num": "BC.AG.SS000547",
     "material_name": "Aircraft Arm In-position Detector Signal Cable"
@@ -23,29 +23,5 @@
     "name_spanish": "Motor (SAME[MOTOR])",
     "material_num": "BC.AG.SS000668",
     "material_name": "Propulsion Motor 10033"
-},
-"front_esc_cable_(SIDE)":
-{
-    "type": "cable",
-    "name": "Front Aircraft Arm ESC Power Adapter Cable ((ENG[SIDE]))",
-    "name_spanish": "Cable Adaptador de Potencia del Brazo Delantero ((SPA[SIDE]))",
-    "material_num": "YC.XC.DD000501",
-    "material_name": "Front Aircraft Arm ESC Power Adapter Cable"
-},
-"m(ARM_FRONT)_esc_cable":
-{
-    "type": "cable",
-    "name": "M(SAME[ARM_FRONT]) Aircraft Arm ESC Composite Cable",
-    "name_spanish": "Cable de ESC del Brazo M(SAME[ARM_FRONT])",
-    "material_num": "YC.XC.XS000011",
-    "material_name": "M1 & M2 Aircraft Arm ESC Composite Cable"
-},
-"m(ARM_BACK)_esc_cable":
-{
-    "type": "cable",
-    "name": "M(SAME[ARM_BACK]) Aircraft Arm ESC Composite Cable",
-    "name_spanish": "Cable de ESC del Brazo M(SAME[ARM_BACK])",
-    "material_num": "YC.XC.XS000012",
-    "material_name": "M3 & M4 Aircraft Arm ESC Composite Cable"
 }
 }
