--- a/domain_knowledge_A/components_sensors.json
+++ b/domain_knowledge_A/components_sensors.json
@@ -1,92 +1,58 @@
 {
-"fwd_vision":
-{
-    "id": "fwd_vision",
-    "type": "sensor",
-    "name": "Forward Vision Sensors",
-    "name_spanish": "Sensores de Visión Frontal",
-    "material_num": "BC.AG.SS000562",
-    "material_name": "Forward Vision Sensor Module"
-},
-"fpv_camera":
-{
-    "id": "fpv_camera",
-    "type": "sensor",
-    "name": "FPV Camera",
-    "name_spanish": "Cámara FPV",
-    "material_num": "BC.AG.SS000549",
-    "material_name": "FPV Module"
-},
 "barometer":
 {
-    "id": "barometer",
     "type": "sensor",
     "name": "Barometer",
     "name_spanish": "Barómetro",
     "material_num": "NA",
     "material_name": "Barometer Module"
 },
-"sdr_ant_(SIDE)":
+"fpv_camera":
 {
-    "id": "sdr_ant_(SAME[SIDE])",
-    "type": "antenna",
-    "name": "SDR Antenna ((ENG[SIDE]))",
-    "name_spanish": "Antena SDR ((SPA[SIDE]))",
-    "material_num": "YC.DZ.AA000275",
-    "material_name": "SDR Antenna"
-},
-"rtk_ant_(SIDE)":
-{
-    "id": "rtk_ant_(SAME[SIDE])",
-    "type": "antenna",
-    "name": "RTK Antenna ((ENG[SIDE]))",
-    "name_spanish": "Antena RTK ((SPA[SIDE]))",
-    "material_num": "BC.AG.SS000560",
-    "material_name": "RTK Antenna Module"
-},
-"omni_radar":
-{
-    "id": "omni_radar",
     "type": "sensor",
-    "name": "Omnidirectional Radar",
-    "name_spanish": "Radar Omnidireccional",
-    "material_num": "BC.AG.SS000551",
-    "material_name": "Omnidirectional Radar Module"
+    "name": "FPV Camera",
+    "name_spanish": "Cámara FPV",
+    "material_num": "BC.AG.SS000549",
+    "material_name": "FPV Module"
 },
-"bwd_radar":
+"fwd_vision":
 {
-    "id": "bwd_radar",
+    "type": "sensor",
+    "name": "Forward Vision Sensors",
+    "name_spanish": "Sensores de Visión Frontal",
+    "material_num": "BC.AG.SS000562",
+    "material_name": "Forward Vision Sensor Module"
+},
+"radar_bwd":
+{
     "type": "sensor",
     "name": "Backward Vision Radar",
     "name_spanish": "Radar de Visión Trasera",
     "material_num": "BC.AG.SS000655",
     "material_name": "Backward Vision Radar Module"
 },
-"rtk_cable_(SIDE)":
+"radar_omni":
 {
-    "id": "rtk_cable_(SAME[SIDE])",
-    "type": "cable",
-    "name": "RTK Coaxial Cable ((ENG[SIDE]))",
-    "name_spanish": "Cable Coaxial RTK ((SPA[SIDE]))",
-    "material_num": "YC.XC.TT000104",
-    "material_name": "RTK Coaxial Cable"
+    "type": "sensor",
+    "name": "Omnidirectional Radar",
+    "name_spanish": "Radar Omnidireccional",
+    "material_num": "BC.AG.SS000551",
+    "material_name": "Omnidirectional Radar Module"
 },
-"omni_radar_cable":
+"rtk_ant_(SIDE)":
 {
-    "id": "omni_radar_cable",
-    "type": "cable",
-    "name": "Omnidirectional Radar Signal Cable",
-    "name_spanish": "Cable de Radar Omnidireccional",
-    "material_num": "YC.XC.XX000844",
-    "material_name": "Omnidirectional Radar Signal Cable"
+    "type": "antenna",
+    "name": "RTK Antenna ((ENG[SIDE]))",
+    "name_spanish": "Antena RTK ((SPA[SIDE]))",
+    "material_num": "BC.AG.SS000560",
+    "material_name": "RTK Antenna Module"
 },
-"bwd_radar_cable":
+"sdr_ant_(SIDE)":
 {
-    "id": "bwd_radar_cable",
-    "type": "cable",
-    "name": "Backward Vision Radar Signal Cable",
-    "name_spanish": "Cable de Radar de Visión Trasera",
-    "material_num": "YC.XC.XX000845",
-    "material_name": "Backward Vision Radar Signal Cable"
+    "type": "antenna",
+    "name": "SDR Antenna ((ENG[SIDE]))",
+    "name_spanish": "Antena SDR ((SPA[SIDE]))",
+    "material_num": "YC.DZ.AA000275",
+    "material_name": "SDR Antenna"
 }
 }
