--- a/domain_knowledge_A/components_spraying.json
+++ b/domain_knowledge_A/components_spraying.json
@@ -1,79 +1,12 @@
 {
-"cdb":
+"centrifugal_motor_(NOZZLE)":
 {
-    "file": "components_core.json",
-    "id": "cdb"
-},
-"pdb":
-{
-    "file": "components_core.json",
-    "id": "pdb"
-},
-"signal_cable_(SIDE)":
-{
-    "file": "components_core.json",
-    "id": "signal_cable_(SAME[SIDE])"
-},
-"spray_board":
-{
-    "file": "components_core.json",
-    "id": "spray_board"
-},
-"load_sensor":
-{
-    "type": "sensor",
-    "name": "Load Sensor",
-    "name_spanish": "Sensor de Peso",
-    "material_num": "BC.AG.SS000550",
-    "material_name": "Load Sensor Module"
-},
-"spray_adapt_cable":
-{
-    "type": "cable",
-    "name": "Spraying Adaptive Cable",
-    "name_spanish": "Cable Adaptativo de Rociado",
-    "material_num": "YC.XC.XX000842",
-    "material_name": "Spraying Adaptive Cable"
-},
-"spray_signal_cable":
-{
-    "type": "cable",
-    "name": "Spraying Signal Cable",
-    "name_spanish": "Cable de Señal de Rociado",
-    "material_num": "YC.XC.XX000835",
-    "material_name": "Spraying Signal Cable"
-},
-"spray_adapter":
-{
-    "type": "board",
-    "name": "Spraying Adapter",
-    "name_spanish": "Tarjeta Adaptadora de Rociado",
-    "material_num": "BC.AG.SS000546",
-    "material_name": "Spraying Adapter Module"
-},
-"flow_meter_cable":
-{
-    "type": "cable",
-    "name": "Flow Meter Signal Cable",
-    "name_spanish": "Cable del Medidor de Caudal",
-    "material_num": "YC.XC.XX000839",
-    "material_name": "Flow Meter Signal Cable"
-},
-"impeller_pump_cable":
-{
-    "type": "cable",
-    "name": "Impeller Pump Signal Cable",
-    "name_spanish": "Cable de Bombas",
-    "material_num": "YC.XC.XX000857",
-    "material_name": "Impeller Pump Signal Cable"
-},
-"liquid_level":
-{
-    "type": "sensor",
-    "name": "Liquid Level Meter",
-    "name_spanish": "Medidor de Nivel de Líquido",
-    "material_num": "BC.AG.SS000547",
-    "material_name": "Liquid Level Meter Module"
+    "type": "motor",
+    "name": "Centrifugal Motor (SAME[NOZZLE])",
+    "name_alt": "Centrifugal Nozzle (SAME[NOZZLE])",
+    "name_spanish": "Motor de Boquilla Centrífuga (SAME[NOZZLE])",
+    "material_num": "BC.AG.SS000565",
+    "material_name": "Centrifugal Motor"
 },
 "flow_meter":
 {
@@ -83,6 +16,22 @@
     "material_num": "BC.AG.SS000545",
     "material_name": "Flow Meter Module"
 },
+"liquid_level":
+{
+    "type": "sensor",
+    "name": "Liquid Level Meter",
+    "name_spanish": "Medidor de Nivel de Líquido",
+    "material_num": "BC.AG.SS000547",
+    "material_name": "Liquid Level Meter Module"
+},
+"load_sensor":
+{
+    "type": "sensor",
+    "name": "Load Sensor",
+    "name_spanish": "Sensor de Peso",
+    "material_num": "BC.AG.SS000550",
+    "material_name": "Load Sensor Module"
+},
 "pump_(PUMP)":
 {
     "type": "motor",
@@ -91,26 +40,12 @@
     "material_num": "BC.AG.SS000543",
     "material_name": "Impeller Pump Motor"
 },
-"m(ARM_BACK)_esc_cable":
+"spray_adapter":
 {
-    "file": "components_propulsion.json",
-    "id": "m(SAME[ARM_BACK])_esc_cable"
-},
-"centrifugal_cable_(SIDE)":
-{
-    "type": "cable",
-    "name": "Centrifugal Sprinkler Signal Cable ((ENG[SIDE]))",
-    "name_spanish": "Cable de Boquilla Centrífuga ((SPA[SIDE]))",
-    "material_num": "YC.XC.XX000841",
-    "material_name": "Centrifugal Sprinkler Signal Cable"
-},
-"centrifugal_motor_(NOZZLE)":
-{
-    "type": "motor",
-    "name": "Centrifugal Motor (SAME[NOZZLE])",
-    "alt_name": "Centrifugal Nozzle (SAME[NOZZLE])",
-    "name_spanish": "Motor de Boquilla Centrífuga (SAME[NOZZLE])",
-    "material_num": "BC.AG.SS000565",
-    "material_name": "Centrifugal Motor"
+    "type": "board",
+    "name": "Spraying Adapter",
+    "name_spanish": "Tarjeta Adaptadora de Rociado",
+    "material_num": "BC.AG.SS000546",
+    "material_name": "Spraying Adapter Module"
 }
 }
