--- a/domain_knowledge_A/components_cables.json
+++ b/domain_knowledge_A/components_cables.json
@@ -1,5 +1,5 @@
 {
-"cable_aux_light_(SIDE)":
+"cable_light_(SIDE)":
 {
     "type": "cable",
     "name": "Auxiliary Bottom Light Signal Cable ((ENG[SIDE]))",
@@ -15,6 +15,30 @@
     "material_num": "YC.XC.XX000841",
     "material_name": "Centrifugal Sprinkler Signal Cable"
 },
+"cable_esc_arm_m(ARM_FRONT)":
+{
+    "type": "cable",
+    "name": "M(SAME[ARM_FRONT]) Aircraft Arm ESC Composite Cable",
+    "name_spanish": "Cable de ESC del Brazo M(SAME[ARM_FRONT])",
+    "material_num": "YC.XC.XS000011",
+    "material_name": "M1 & M2 Aircraft Arm ESC Composite Cable"
+},
+"cable_esc_arm_m(ARM_BACK)":
+{
+    "type": "cable",
+    "name": "M(SAME[ARM_BACK]) Aircraft Arm ESC Composite Cable",
+    "name_spanish": "Cable de ESC del Brazo M(SAME[ARM_BACK])",
+    "material_num": "YC.XC.XS000012",
+    "material_name": "M3 & M4 Aircraft Arm ESC Composite Cable"
+},
+"cable_esc_front_power_(SIDE)":
+{
+    "type": "cable",
+    "name": "Front Aircraft Arm ESC Power Adapter Cable ((ENG[SIDE]))",
+    "name_spanish": "Cable Adaptador de Potencia del Brazo Delantero ((SPA[SIDE]))",
+    "material_num": "YC.XC.DD000501",
+    "material_name": "Front Aircraft Arm ESC Power Adapter Cable"
+},
 "cable_flow_meter":
 {
     "type": "cable",
@@ -23,15 +47,7 @@
     "material_num": "YC.XC.XX000839",
     "material_name": "Flow Meter Signal Cable"
 },
-"cable_front_esc_(SIDE)":
-{
-    "type": "cable",
-    "name": "Front Aircraft Arm ESC Power Adapter Cable ((ENG[SIDE]))",
-    "name_spanish": "Cable Adaptador de Potencia del Brazo Delantero ((SPA[SIDE]))",
-    "material_num": "YC.XC.DD000501",
-    "material_name": "Front Aircraft Arm ESC Power Adapter Cable"
-},
-"cable_impeller_pump":
+"cable_pump":
 {
     "type": "cable",
     "name": "Impeller Pump Signal Cable",
@@ -39,22 +55,7 @@
     "material_num": "YC.XC.XX000857",
     "material_name": "Impeller Pump Signal Cable"
 },
-"cable_m(ARM_FRONT)_esc":
-{
-    "type": "cable",
-    "name": "M(SAME[ARM_FRONT]) Aircraft Arm ESC Composite Cable",
-    "name_spanish": "Cable de ESC del Brazo M(SAME[ARM_FRONT])",
-    "material_num": "YC.XC.XS000011",
-    "material_name": "M1 & M2 Aircraft Arm ESC Composite Cable"
-},
-"cable_m(ARM_BACK)_esc":
-{
-    "type": "cable",
-    "name": "M(SAME[ARM_BACK]) Aircraft Arm ESC Composite Cable",
-    "name_spanish": "Cable de ESC del Brazo M(SAME[ARM_BACK])",
-    "material_num": "YC.XC.XS000012",
-    "material_name": "M3 & M4 Aircraft Arm ESC Composite Cable"
-},
+
 "cable_radar_bwd":
 {
     "type": "cable",
